--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "devDependencies": {
     "@babel/cli": "^7.2.0",
     "@babel/core": "^7.4.5",
-    "@babel/plugin-transform-runtime": "^7.4.4",
+    "@babel/plugin-proposal-class-properties": "^7.5.5",
+    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
+    "@babel/plugin-transform-runtime": "^7.5.5",
     "@babel/preset-env": "^7.4.5",
+    "@babel/preset-react": "^7.0.0",
     "@babel/runtime": "^7.4.5",
     "babel-eslint": "9.x",
     "babel-loader": "^8.0.6",
