--- a/packages/redux-modules/package.json
+++ b/packages/redux-modules/package.json
@@ -24,5 +24,6 @@
   "license": "MIT",
   "devDependencies": {
     "rimraf": "^2.6.3"
-  }
+  },
+  "gitHead": "962c60a7aa37f395e04272ef4ad417cd8fb6af15"
 }
