--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "@babel/preset-env": "^7.4.5",
     "@babel/preset-react": "^7.0.0",
     "@babel/runtime": "^7.4.5",
-    "babel-eslint": "9.x",
+    "@typescript-eslint/eslint-plugin": "1.x",
+    "@typescript-eslint/parser": "1.x",
+    "babel-eslint": "10.x",
     "babel-loader": "^8.0.6",
     "eslint": "5.x",
     "eslint-config-react-app": "^4.0.1",
@@ -23,7 +25,8 @@
     "jest": "^24.8.0",
     "lerna": "^3.15.0",
     "lint-staged": "^8.2.0",
-    "prettier": "^1.18.2"
+    "prettier": "^1.18.2",
+    "typescript": "^3.5.3"
   },
   "scripts": {
     "test": "jest",
