--- a/package.json
+++ b/package.json
@@ -7,12 +7,15 @@
     "@babel/plugin-proposal-class-properties": "^7.5.5",
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "@babel/plugin-transform-runtime": "^7.5.5",
-    "@babel/preset-env": "^7.4.5",
+    "@babel/preset-env": "^7.5.5",
     "@babel/preset-react": "^7.0.0",
     "@babel/runtime": "^7.4.5",
+    "@material-ui/core": "^4.3.2",
+    "@testing-library/react": "^9.1.1",
     "@typescript-eslint/eslint-plugin": "1.x",
     "@typescript-eslint/parser": "1.x",
     "babel-eslint": "10.x",
+    "babel-jest": "^24.8.0",
     "babel-loader": "^8.0.6",
     "eslint": "5.x",
     "eslint-config-react-app": "^4.0.1",
@@ -22,10 +25,17 @@
     "eslint-plugin-react": "7.x",
     "eslint-plugin-react-hooks": "1.5.0",
     "husky": "^2.4.0",
+    "immutable": "^4.0.0-rc.12",
     "jest": "^24.8.0",
     "lerna": "^3.15.0",
     "lint-staged": "^8.2.0",
     "prettier": "^1.18.2",
+    "react": "^16.9.0",
+    "react-dom": "^16.9.0",
+    "react-redux": "^7.1.0",
+    "redux": "^4.0.4",
+    "redux-actions": "^2.6.5",
+    "redux-mock-store": "^1.5.3",
     "typescript": "^3.5.3"
   },
   "scripts": {
