--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@babel/preset-react": "^7.0.0",
     "@babel/runtime": "^7.4.5",
     "@material-ui/core": "^4.3.2",
+    "@testing-library/jest-dom": "^4.0.0",
     "@testing-library/react": "^9.1.1",
     "@typescript-eslint/eslint-plugin": "1.x",
     "@typescript-eslint/parser": "1.x",
