--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "eslint-plugin-jsx-a11y": "6.x",
     "eslint-plugin-react": "7.x",
     "eslint-plugin-react-hooks": "1.5.0",
+    "fetch-mock": "^7.3.9",
     "husky": "^2.4.0",
     "immutable": "^4.0.0-rc.12",
     "jest": "^24.8.0",
@@ -36,6 +37,7 @@
     "redux": "^4.0.4",
     "redux-actions": "^2.6.5",
     "redux-mock-store": "^1.5.3",
+    "redux-thunk": "^2.3.0",
     "typescript": "^3.5.3"
   },
   "scripts": {
