--- a/packages/redux-modules/package.json
+++ b/packages/redux-modules/package.json
@@ -25,5 +25,8 @@
     "react-dom": "^16.8.6",
     "react-redux": "^7.1.0",
     "redux-actions": "^2.6.5"
+  },
+  "dependencies": {
+    "lodash": "^4.17.15"
   }
 }
