--- a/packages/redux-modules/package.json
+++ b/packages/redux-modules/package.json
@@ -20,13 +20,13 @@
   },
   "gitHead": "962c60a7aa37f395e04272ef4ad417cd8fb6af15",
   "peerDependencies": {
-    "immutable": "^4.0.0-rc.12",
     "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-redux": "^7.1.0",
-    "redux-actions": "^2.6.5"
+    "react-dom": "^16.8.6"
   },
   "dependencies": {
-    "lodash": "^4.17.15"
+    "immutable": "^4.0.0-rc.12",
+    "lodash": "^4.17.15",
+    "react-redux": "^7.1.3",
+    "redux-actions": "^2.6.5"
   }
 }
