--- a/packages/redux-modules/package.json
+++ b/packages/redux-modules/package.json
@@ -27,6 +27,7 @@
     "immutable": "^4.0.0-rc.12",
     "lodash": "^4.17.15",
     "react-redux": "^7.1.3",
-    "redux-actions": "^2.6.5"
+    "redux-actions": "^2.6.5",
+    "warning": "^4.0.3"
   }
 }
