--- a/packages/redux-modules/package.json
+++ b/packages/redux-modules/package.json
@@ -38,6 +38,7 @@
     "react-dom": "^16.8.6"
   },
   "dependencies": {
+    "immer": "^6.0.8",
     "immutable": "^4.0.0-rc.12",
     "lodash": "^4.17.15",
     "react-redux": "^7.1.3",
