--- a/packages/redux-modules/package.json
+++ b/packages/redux-modules/package.json
@@ -41,6 +41,7 @@
     "immer": "^6.0.8",
     "immutable": "^4.0.0-rc.12",
     "lodash": "^4.17.15",
+    "lodash.clonedeep": "^4.5.0",
     "react-redux": "^7.1.3",
     "redux-actions": "^2.6.5",
     "warning": "^4.0.3"
