--- a/packages/redux-modules/package.json
+++ b/packages/redux-modules/package.json
@@ -42,6 +42,7 @@
     "immutable": "^4.0.0-rc.12",
     "lodash": "^4.17.15",
     "lodash.clonedeep": "^4.5.0",
+    "lodash.merge": "^4.6.2",
     "react-redux": "^7.1.3",
     "redux-actions": "^2.6.5",
     "warning": "^4.0.3"
