--- a/packages/redux-modules/package.json
+++ b/packages/redux-modules/package.json
@@ -41,8 +41,10 @@
     "immer": "^6.0.8",
     "immutable": "^4.0.0-rc.12",
     "lodash": "^4.17.15",
+    "lodash.assign": "^4.2.0",
     "lodash.clonedeep": "^4.5.0",
     "lodash.merge": "^4.6.2",
+    "lodash.mergewith": "^4.6.2",
     "react-redux": "^7.1.3",
     "redux-actions": "^2.6.5",
     "warning": "^4.0.3"
