--- a/packages/redux-modules/package.json
+++ b/packages/redux-modules/package.json
@@ -21,7 +21,7 @@
   "scripts": {
     "test": "jest",
     "clean": "rimraf build",
-    "build": "yarn clean && yarn build:esm && yarn build:copy-files",
+    "build": "yarn clean && yarn build:esm && tsc ./src/index.ts --declaration --jsx react --esModuleInterop --emitDeclarationOnly && yarn build:copy-files",
     "build:esm": "babel --config-file ../../babel.config.js ./src --out-dir ./build",
     "build:copy-files": "node ../../scripts/copy-files.js",
     "prepare": "yarn build"
@@ -34,20 +34,24 @@
   },
   "gitHead": "962c60a7aa37f395e04272ef4ad417cd8fb6af15",
   "peerDependencies": {
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6"
+    "@types/react": "^16.9.43",
+    "@types/react-dom": "^16.9.8",
+    "@types/react-redux": "^7.1.9",
+    "@types/redux-actions": "^2.6.1",
+    "immutable": "^4.0.0-rc.12",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-redux": "^7.2.0",
+    "redux-actions": "^2.6.5"
   },
   "dependencies": {
     "@e-group/utils": "^6.23.0",
     "immer": "^7.0.1",
-    "immutable": "^4.0.0-rc.12",
     "lodash": "^4.17.15",
     "lodash.assign": "^4.2.0",
     "lodash.clonedeep": "^4.5.0",
     "lodash.merge": "^4.6.2",
     "lodash.mergewith": "^4.6.2",
-    "react-redux": "^7.2.0",
-    "redux-actions": "^2.6.5",
     "warning": "^4.0.3"
   },
   "engines": {
