--- a/package.json
+++ b/package.json
@@ -2,31 +2,31 @@
   "name": "root",
   "private": true,
   "devDependencies": {
-    "@babel/cli": "^7.2.0",
-    "@babel/core": "^7.4.5",
-    "@babel/plugin-transform-runtime": "^7.5.5",
-    "@babel/preset-env": "^7.5.5",
-    "@babel/preset-react": "^7.0.0",
+    "@babel/cli": "^7.10.5",
+    "@babel/core": "^7.11.1",
+    "@babel/plugin-transform-runtime": "^7.11.0",
+    "@babel/preset-env": "^7.11.0",
+    "@babel/preset-react": "^7.10.4",
     "@babel/preset-typescript": "^7.10.4",
-    "@babel/runtime": "^7.4.5",
+    "@babel/runtime": "^7.11.2",
     "@testing-library/jest-dom": "^5.10.1",
     "@testing-library/react": "^10.3.0",
     "@types/react": "^16.9.43",
     "@types/react-dom": "^16.9.8",
     "@types/react-redux": "^7.1.9",
     "@types/redux-actions": "^2.6.1",
-    "@typescript-eslint/eslint-plugin": "1.x",
-    "@typescript-eslint/parser": "1.x",
+    "@typescript-eslint/eslint-plugin": "2.x",
+    "@typescript-eslint/parser": "2.x",
     "babel-eslint": "10.x",
     "babel-jest": "^24.8.0",
     "babel-loader": "^8.0.6",
-    "eslint": "5.x",
-    "eslint-config-react-app": "^4.0.1",
-    "eslint-plugin-flowtype": "2.x",
+    "eslint": "6.x",
+    "eslint-config-react-app": "^5.2.1",
+    "eslint-plugin-flowtype": "4.x",
     "eslint-plugin-import": "2.x",
     "eslint-plugin-jsx-a11y": "6.x",
     "eslint-plugin-react": "7.x",
-    "eslint-plugin-react-hooks": "1.5.0",
+    "eslint-plugin-react-hooks": "2.x",
     "fetch-mock": "^7.3.9",
     "husky": "^2.4.0",
     "immutable": "^4.0.0-rc.12",
@@ -36,12 +36,12 @@
     "prettier": "^1.18.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-redux": "^7.2.0",
-    "redux": "^4.0.4",
+    "react-redux": "^7.2.1",
+    "redux": "^4.0.5",
     "redux-actions": "^2.6.5",
     "redux-mock-store": "^1.5.3",
     "redux-thunk": "^2.3.0",
-    "typescript": "^3.5.3"
+    "typescript": "^3.9.7"
   },
   "scripts": {
     "test": "jest",
