--- a/packages/redux-modules/package.json
+++ b/packages/redux-modules/package.json
@@ -22,7 +22,7 @@
     "test": "jest",
     "clean": "rimraf build",
     "build": "yarn clean && yarn build:esm && yarn build:tsd && yarn build:copy-files",
-    "build:tsd": "tsc ./src/index.ts --declaration --esModuleInterop --emitDeclarationOnly",
+    "build:tsd": "tsc ./src/index.ts --declaration --jsx react --esModuleInterop --emitDeclarationOnly",
     "build:esm": "babel --config-file ../../babel.config.js ./src --out-dir ./build --extensions .js,.ts",
     "build:copy-files": "node ../../scripts/copy-files.js",
     "prepare": "yarn build"
@@ -47,6 +47,8 @@
   },
   "dependencies": {
     "@e-group/utils": "^6.23.0",
+    "@types/lodash.merge": "^4.6.6",
+    "@types/warning": "^3.0.0",
     "immer": "^7.0.1",
     "lodash": "^4.17.15",
     "lodash.assign": "^4.2.0",
