--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
     "lib": ["es5", "es6", "es7", "es2017", "dom"],
     "sourceMap": true,
     "allowJs": false,
+    "jsx": "react",
     "moduleResolution": "node",
     "rootDirs": ["packages"],
     "baseUrl": "packages",
