--- a/packages/redux-modules/package.json
+++ b/packages/redux-modules/package.json
@@ -23,7 +23,7 @@
     "clean": "rimraf build",
     "build": "yarn clean && yarn build:esm && yarn build:tsd && yarn build:copy-files",
     "build:tsd": "tsc ./src/index.ts --declaration --jsx react --esModuleInterop --emitDeclarationOnly",
-    "build:esm": "babel --config-file ../../babel.config.js ./src --out-dir ./build --extensions .js,.ts",
+    "build:esm": "babel --config-file ../../babel.config.js ./src --out-dir ./build --extensions .js,.ts,.tsx",
     "build:copy-files": "node ../../scripts/copy-files.js",
     "prepare": "yarn build"
   },
