--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "root",
   "private": true,
-  "devDependencies": {
+  "dependencies": {
     "@babel/cli": "^7.10.5",
     "@babel/core": "^7.11.1",
     "@babel/plugin-transform-runtime": "^7.11.0",
@@ -9,31 +9,34 @@
     "@babel/preset-react": "^7.10.4",
     "@babel/preset-typescript": "^7.10.4",
     "@babel/runtime": "^7.11.2",
-    "@testing-library/jest-dom": "^5.10.1",
-    "@testing-library/react": "^10.3.0",
-    "@types/react": "^16.9.43",
+    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/react": "^11.0.4",
+    "@types/jest": "^26.0.13",
+    "@types/react": "^16.9.49",
     "@types/react-dom": "^16.9.8",
     "@types/react-redux": "^7.1.9",
     "@types/redux-actions": "^2.6.1",
-    "@typescript-eslint/eslint-plugin": "2.x",
-    "@typescript-eslint/parser": "2.x",
+    "@typescript-eslint/eslint-plugin": "^4.1.1",
+    "@typescript-eslint/parser": "^4.1.1",
     "babel-eslint": "10.x",
-    "babel-jest": "^24.8.0",
     "babel-loader": "^8.0.6",
-    "eslint": "6.x",
-    "eslint-config-react-app": "^5.2.1",
-    "eslint-plugin-flowtype": "4.x",
-    "eslint-plugin-import": "2.x",
-    "eslint-plugin-jsx-a11y": "6.x",
-    "eslint-plugin-react": "7.x",
-    "eslint-plugin-react-hooks": "2.x",
+    "eslint": "^7.9.0",
+    "eslint-config-airbnb-typescript": "^10.0.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-formatter-pretty": "^4.0.0",
+    "eslint-import-resolver-typescript": "^2.3.0",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-jest": "^24.0.1",
+    "eslint-plugin-jsx-a11y": "^6.3.1",
+    "eslint-plugin-react": "^7.20.6",
+    "eslint-plugin-react-hooks": "^4.1.2",
     "fetch-mock": "^7.3.9",
-    "husky": "^2.4.0",
+    "husky": "^4.3.0",
     "immutable": "^4.0.0-rc.12",
-    "jest": "^24.8.0",
+    "jest": "^26.4.2",
     "lerna": "^3.15.0",
-    "lint-staged": "^8.2.0",
-    "prettier": "^1.18.2",
+    "lint-staged": "^10.3.0",
+    "prettier": "^2.1.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.1",
@@ -41,14 +44,16 @@
     "redux-actions": "^2.6.5",
     "redux-mock-store": "^1.5.3",
     "redux-thunk": "^2.3.0",
-    "typescript": "^3.9.7"
+    "ts-jest": "^26.3.0",
+    "typescript": "^4.0.2"
   },
   "scripts": {
     "test": "jest",
     "test:dev": "jest --watch",
     "build": "lerna run build",
     "release": "lerna publish --contents build",
-    "generate-changelog": "github_changelog_generator -u abrcdf1023 -p egroup-redux"
+    "generate-changelog": "github_changelog_generator -u abrcdf1023 -p egroup-redux",
+    "lint": "eslint --ext .jsx,.js,.ts,.tsx ./ --fix"
   },
   "husky": {
     "hooks": {
