--- a/packages/redux-modules/package.json
+++ b/packages/redux-modules/package.json
@@ -38,12 +38,11 @@
     "@types/react": "^16.9.43",
     "@types/react-dom": "^16.9.8",
     "@types/react-redux": "^7.1.9",
-    "@types/redux-actions": "^2.6.1",
     "immutable": "^4.0.0-rc.12",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
-    "redux-actions": "^2.6.5"
+    "@reduxjs/toolkit": "^1.4.0"
   },
   "dependencies": {
     "@e-group/utils": "^6.26.2",
