--- a/packages/redux-modules/package.json
+++ b/packages/redux-modules/package.json
@@ -42,7 +42,8 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
-    "@reduxjs/toolkit": "^1.4.0"
+    "@reduxjs/toolkit": "^1.4.0",
+    "redux": "^4.0.5"
   },
   "dependencies": {
     "@e-group/utils": "^6.26.2",
